# gestor_ftp_new

./: Nuevo Documento de texto.txt
gestor_ftp/: CMakeLists.txt  CONFIGURACION_CLIENTE_FTP.md  DOCUMENTATION.md  DatabaseManager.cpp  DatabaseManager.h  DirectoryCache.h  ErrorHandler.cpp  ErrorHandler.h  FtpClientHandler.cpp  FtpClientHandler.h  FtpServer.cpp  FtpServer.h  FtpServerThread.cpp  FtpServerThread.h  Logger.cpp  Logger.h  README.md  SecurityPolicy.h  ShortcutDialog.cpp  ShortcutDialog.h  ShortcutManager.cpp  ShortcutManager.h  SystemMonitor.cpp  SystemMonitor.h  TransferWorker.cpp  TransferWorker.h  build_fix.bat  compile_fix.bat  compile_pasv.bat  compile_test.bat  compile_translations.bat  deploy_plugins.bat  deploy_windows.bat  diagnostico_pasv.bat  gestor.cpp  gestor.h  gestor.ui  gestor_ftp.pro  main.cpp  recursos.qrc  (+7 more)
gestor_ftp/Copia build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
gestor_ftp/Copia build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: DatabaseManager.cpp.761081FC2443C3AB.idx  DatabaseManager.h.8CCFF2C3BCDD2777.idx  DirectoryCache.h.B018F6CBAD0DF1B6.idx  FtpClientHandler.cpp.140C0CDB40AB0510.idx  FtpClientHandler.h.3432DAF27B335886.idx  FtpServer.cpp.E8F9CF4ABC783D35.idx  FtpServer.h.DF94941A6500422F.idx  FtpServerThread.cpp.C675CCC0D5EF94BC.idx  FtpServerThread.h.DBD78AA36790A7D1.idx  Logger.cpp.61E365069BC82D1C.idx  Logger.h.D38C950398E5CF8F.idx  QAtomicInteger.68DB31B739B9A732.idx  QBuffer.D1B1C51370CFBE0B.idx  QCryptographicHash.B009DF7AE944B6E8.idx  QElapsedTimer.BFCFA69692A59286.idx  QFileInfoList.43422862F2078F61.idx  QHostAddress.684F52F08C4FBC3F.idx  QMessageLogContext.DF1C6159F564DD76.idx  QMutexLocker.C32F365A11178C8F.idx  QStorageInfo.84BE394638854E2D.idx  QtConcurrentRun.F571321D33918CD3.idx  dirent.h.B364A879D14D2189.idx  fstream.2208164229B9BA1D.idx  fstream.tcc.2A736AF28B4EF139.idx  gestor.cpp.D6D053422F0D3C55.idx  gestor.h.5BC336B7ED765430.idx  main.cpp.4CC15D3FD632B4B1.idx  qaction.h.1356B221D498DB19.idx  qcache.h.5ACE214C604E0628.idx  qcomparehelpers.h.B2525F20142587E6.idx  qcompleter.h.33F977AE1E80DDBD.idx  qcontainerfwd.h.EE3B4EE1B93EE140.idx  qdeadlinetimer.h.D966867E380BBB53.idx  qfile.h.4DFEE6F2D829850A.idx  qfiledialog.h.A5F58DE9DCE743B1.idx  qflags.h.6806F91AACCA944B.idx  qfloat16.h.6D6D549F4698C5E9.idx  qframe.h.6122B8F27D9A86AF.idx  qfuture.h.4DC034B60EC6BACC.idx  qfuture_impl.h.758E9BEF5E9C6533.idx  (+24 more)
gestor_ftp/Copia build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/debug/: moc_predefs.h  qmake_qmake_qm_files.qrc
gestor_ftp/Copia build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/debug/db/: ftp_users.db
gestor_ftp/Copia build/Desktop_Qt_6_9_0_MinGW_64_bit-Debug/release/: qmake_qmake_qm_files.qrc
gestor_ftp/styles/: dark.qss  light.qss
gestor_ftp/tests/: TestGestorFTP.cpp  TestGestorFTP.h  tests.pro
gestor_ftp/translations/: gestor_ar.ts  gestor_de.ts  gestor_en.ts  gestor_es.ts  gestor_fr.ts  gestor_it.ts  gestor_ja.ts  gestor_ko.ts  gestor_pt.ts  gestor_ru.ts  gestor_zh.ts
